# ISTCode

./: .gitignore  AGENTS.md  INSTALL_FROM_GITHUB.md  INSTALL_ON_OTHER_PC.md  PUBLISH_TO_PYPI.md  README.md  USER_GUIDE_RU.md  make_offline_bundle.bat  publish_new_version.bat  pyproject.toml
.github/workflows/: publish.yml
scripts/: build_offline_bundle.py  bump_version.py
src/my_python_library/: __init__.py  cli.py  core.py  files.py  images.py  search.py  tickets.py  word.py
src/my_python_library/assets/files/: README.md
src/my_python_library/assets/files/ticket_01/: README.md  ticket.docx  ticket.md  ticket_1_question_1_presentation.pptx
src/my_python_library/assets/files/ticket_02/: README.md  apartments.csv  apartments_plot.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_03/: README.md  generate_bpmn_diagram.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_04/: README.md  generate_c4_diagrams.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_05/: README.md  bot.py  test_weather.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_06/: README.md  app.py  make_window_mockup.py  test_db.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_07/: README.md  generate_bpmn_software.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_08/: README.md  generate_medical_exams.py  medical_analysis.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_09/: README.md  apartments_heatmap.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_10/: README.md  generate_c4_orders.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_11/: README.md  medical_exams.csv  medical_heatmap.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_12/: README.md  generate_erd.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_13/: README.md  generate_mock_page.py  mock_news.html  parsed_articles.json  ticket.docx  ticket.md  web_scraper.py
src/my_python_library/assets/files/ticket_14/: README.md  generate_traffic_accidents.py  ticket.docx  ticket.md  traffic_accidents.csv  traffic_analysis.py
src/my_python_library/assets/files/ticket_15/: README.md  feedback_form_tk.py  ticket.docx  ticket.md
src/my_python_library/assets/files/ticket_16/: README.md  ticket.docx  ticket.md  traffic_analysis.py
src/my_python_library/assets/images/: README.md
tests/: test_core.py
(+16 files in other folders)
