[project]
name = "my-python-library"
version = "0.2.0"
description = "Command-line exam ticket helper"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "twine>=5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ist-ticket = "my_python_library.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
