[project]
name = "istcode"
version = "0.2.6"
description = "Command-line exam ticket helper"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pyshok342", email = "spqamsjf@clokkmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "twine>=5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ist-ticket = "my_python_library.cli:main"

[project.urls]
Repository = "https://github.com/Pyshok342/ISTCode"

[tool.setuptools.package-data]
my_python_library = ["assets/files/*", "assets/files/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
