[project]
name = "istcode"
version = "2.14"
description = "Command-line exam ticket helper"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Pyshok342", email = "spqamsjf@clokkmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "importlib-resources>=5.12; python_version < '3.9'",
  "python-docx>=1.1.2,<1.2; python_version < '3.9'",
  "python-docx>=1.1.2; python_version >= '3.9'"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "twine>=5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ist-ticket = "my_python_library.cli:main"

[project.urls]
Repository = "https://github.com/Pyshok342/ISTCode"

[tool.setuptools.package-data]
my_python_library = ["assets/files/*", "assets/files/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
